--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
+
         <link rel="stylesheet" href="static\css\home_css.css">
-=======
         <link rel="stylesheet" href="..\static\css\home_css.css">
->>>>>>> 30e89bb7b2915c5c9f5c7d6e199eb85f3119febe
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Hif_Home</title>
     </head>
@@ -50,11 +48,7 @@
          
          <div class="auto-margin">
             <div class="main-content">
-<<<<<<< HEAD
-             <p class="main-text">Welcome</p>
-                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">Start (Create New)  <img class="image" src="..\static\img&icon\icon_btn.png"></button>
-                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)  <img class="image" src="..\static\img&icon\icon_btn2.png"></button>
-=======
+<!-- เราลบโค้ดบางส่วนที่ไม่จำเป็นออกนะ (BIG) -->
                 <div class="content">
                     <h2 class="text" data-text="WELCOME">
                        WELCOME
@@ -62,7 +56,6 @@
                 </div>
                 <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">Start (Create New)  <img class="image" src="..\static\img&icon\icon_btn.png"></button>
                 <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)  <img class="image" src="..\static\img&icon\icon_btn2.png"></button>
->>>>>>> 30e89bb7b2915c5c9f5c7d6e199eb85f3119febe
             </div>
         </div>
             <section>
