--- a/static/css/bmi_css.css
+++ b/static/css/bmi_css.css
@@ -238,10 +238,10 @@ input:checked ~ .menu-x {
 }
 
 .bmi-p1 {
-    font-size:90px;
+    font-size:110px;
     font-weight: 500;
     color: black;
-    margin: 10% 0 0 31%;
+    margin: 10% 0 0 29%;
 }
 
 .bmi-p2 {
@@ -262,7 +262,7 @@ input:checked ~ .menu-x {
     font-size:35px;
     font-weight: 400;
     color: black;
-    margin: 3% 0 0 3%;
+    margin: 1% 0 0 1%;
 
 }
 
@@ -274,3 +274,19 @@ body{
     background-repeat: no-repeat;
 }
 
+.reset-form {
+    width: 20%;
+    height: 10%;
+    position: absolute;
+    margin: -2% 0 0 37%; 
+    position: absolute;
+}
+
+.btn-reset {
+    width: 70%;
+    height: 40%;
+    background-color: antiquewhite;
+}
+
+
+/* backe */
