--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
                     <label for="menu">MENU</label>
                     <div class="menu-x">
                         <ul>
-                            <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                            <li><a href="http://127.0.0.1:5000/home">Home</a></li>
                             <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
                             <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
                             <li><a href="http://127.0.0.1:5000/about">About</a></li>
@@ -28,7 +28,7 @@
                 <p class="p-in">Let's me check your BODY 🤍</p>
                 <div  class="a-in">
                     <div class="a-inx">
-                        <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                        <a href="http://127.0.0.1:5000/user_account_login">{{session['user']}}</a>
                     </div>
                 </div>
             </form>
