--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
                     <label for="menu">MENU</label>
                     <div class="menu-x">
                         <ul>
-                            <li><a href="http://127.0.0.1:5000/"><p class="menu-text">Home</p></a></li>
+                            <li><a href="http://127.0.0.1:5000/home"><p class="menu-text">Home</p></a></li>
                             <li><a href="http://127.0.0.1:5000/bmi"><p class="menu-text">MyBMI</p></a></li>
                             <li><a href="http://127.0.0.1:5000/hif_main"><p class="menu-text">Your Body</p></a></li>
                             <li><a href="http://127.0.0.1:5000/about"><p class="menu-text">About</p></a></li>
@@ -34,14 +34,15 @@
                 </div>
                 </div> 
                 <p class="p-in">Let's me check your BODY 🤍</p>
+                
                 <div  class="a-in">
                     <div class="a-inx">
-                        <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                        <a href="http://127.0.0.1:5000/user_account/user_account_login">{{session['user']}}</a>
                     </div>
                 </div>
             </form>
         </div>  
-     
+        
          <!-- คนที่มาทำต่อเขียนโค้ดด้านล่างนี้เลยนะ ข้างบนถ้าจะเเก้อย่าลืมบันทึกโค้ดเก่าด้วย
          มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
          บอกเพื่อนทุกครั้งนะ ว่าทำอะ แก้ตรงไหน (เขียนชื่อ เเละช่องทางติดต่อส่วนตัวให้ด้วย)   -->
