--- a/static/css/home_css.css
+++ b/static/css/home_css.css
@@ -125,6 +125,7 @@ input:checked ~ .menu-x {
     position: absolute;
 }
 
+
 .a-in{
     width: 100%;
     height: 100%;
@@ -139,8 +140,10 @@ input:checked ~ .menu-x {
 }
 
 .a-inx {
-    font-size: 22px;
-    margin: 25px 0 0 0;
+    font-size: 27px;
+    font-weight: 650;
+    margin: 1% 0 0 0;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -979,3 +982,11 @@ html {
   }
 }
 /********** Text ตรงกลาง ***********/
+
+
+.p-inname {
+  font-size: 22px;
+  color: #fafafa;
+  margin: 20px 0 100px 400px;
+  position: absolute;
+}
