--- a/static/css/login_css.css
+++ b/static/css/login_css.css
@@ -91,3 +91,11 @@ span{
     font-size: 20px;
     margin: 450px 0 0 40px;
 }
+
+.incor {
+    font-size: 20px;
+    color: red;
+    font-weight: 700;
+    position: absolute;
+    margin: 18% 0 0 24%;
+}
