--- a/templates/home.html
+++ b/templates/home.html
@@ -55,7 +55,7 @@
                        WELCOME
                     </h2>
                 </div>
-                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">Start (Create New)  <img class="image" src="..\static\img&icon\icon_btn.png"></button>
+                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/user_account/user_account_login'">Start (Create New)  <img class="image" src="..\static\img&icon\icon_btn.png"></button>
                 <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)  <img class="image" src="..\static\img&icon\icon_btn2.png"></button>
             </div>
         </div>
