--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -82,8 +82,15 @@
                     </form>
                 </div>
             </div>
+
+            <!-- div ลิงค์ไปหน้า food recommend--> 
+            <div class="manu-box">
+                <a href="#">เเนะนำอาหาร</a>
+                <a href="#">เเนะนำการออกกำลังกาย</a>
             </div>
         </div>
+           
+    </div>
             
 
     
