--- a/static/css/bmi_css.css
+++ b/static/css/bmi_css.css
@@ -13,13 +13,13 @@
     list-style: none;
 }
 
-.backgroud{
+/* .backgroud{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url(bg02.jpeg);
     background-size: cover;
     background-position: center; 
-}
+} */
 
 .box {
     width: 100%;
@@ -290,3 +290,12 @@ body{
 
 
 /* backe */
+
+.manu-box {
+    width: 19%;
+    height: 60%;
+    margin: 8% 0 0 4%;
+    position: absolute;
+    background-color: antiquewhite;
+    
+}
