--- a/templates/hif_main.html
+++ b/templates/hif_main.html
@@ -21,7 +21,7 @@
                     <label for="menu">MENU</label>
                     <div class="menu-x">
                         <ul>
-                            <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                            <li><a href="http://127.0.0.1:5000/home">Home</a></li>
                             <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
                             <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
                             <li><a href="http://127.0.0.1:5000/about">About</a></li>
