07/11/2021 จัดหน้า bmi by TLE and LOTTO

--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -85,8 +85,8 @@
 
             <!-- div ลิงค์ไปหน้า food recommend--> 
             <div class="manu-box">
-                <a href="#">เเนะนำอาหาร</a>
-                <a href="#">เเนะนำการออกกำลังกาย</a>
+                <div href="#" class="rcm">เเนะนำอาหาร</div>
+                <div href="#" class="rcm">ตารางเปรียบเทียบค่า BMI</div>
             </div>
         </div>
            
