--- a/static/css/bmi_css.css
+++ b/static/css/bmi_css.css
@@ -159,12 +159,14 @@ input:checked ~ .menu-x {
 }
 
 .box-body {
-    width: 200px;
-    height: 370px;
-
-    margin: 18.5% 0 0 62%;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 80px 0 0 300px; 
 }
 
 .box-weigth {
@@ -172,26 +174,30 @@ input:checked ~ .menu-x {
     height: 100px;
     border-right: 3px solid black;
     border-left: 3px solid black;
-    margin-bottom: 60px;
+    margin: 60px 0 60px 0;
+    background-color: bisque;
 }
 
 .p-box {
-    font-size: 40px;
+    font-size: 30px;
     color: black;
     text-align: center;
 }
 
 
 .input-form {
-    width: 300px;
-    height: 320px;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    margin:19% 0 0 72%;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: flex-end;
+    padding: 0 150px 20px 0;
 }
 
 .input-form input {
-    width: 260px;
+    width: 400px;
     height: 60px;
     font-size: 28px;
     border-bottom: 3px solid black; 
@@ -206,42 +212,48 @@ input:checked ~ .menu-x {
 }
 
 .input2 {
-    margin: 108px 0 15px 0;
+    margin: 160px 0 -35px 0;
 }
 .btn-go {
-    width: 140px;
+    width: 400px;
     height: 60px;
     font-size: 30px;
     cursor: pointer;
-    border-radius: 24%;
-    margin: 30px 0 0 120px;
+    margin-top: 56px;
 }
 
 .mybmi {
-    width: 28%;
-    height: 60%;
-    margin: 13% 0 0 32%;
+    width: 75%;
+    height: 100%;
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     
 }
 
 .box-bmi {
-    width: 90%;
-      height: 80%;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      border-radius: 50%;
-      background: rgb(255, 255, 255);
-      border: 5px solid black;
-      margin: 20px 0px 5px 20px ;
-      
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background: rgb(255, 255, 255);
+    border: 5px solid black;
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    height: 350px;
 }
 
 .bmi-p1 {
-    font-size:110px;
+    font-size: 80px;
     font-weight: 500;
     color: black;
-    margin: 10% 0 0 29%;
+    justify-items: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 85px;
 }
 
 .bmi-p2 {
@@ -259,7 +271,7 @@ input:checked ~ .menu-x {
 }
 
 .bmi-p3 {
-    font-size:35px;
+    font-size:20px;
     font-weight: 400;
     color: black;
     margin: 1% 0 0 1%;
@@ -275,27 +287,47 @@ body{
 }
 
 .reset-form {
-    width: 20%;
-    height: 10%;
-    position: absolute;
-    margin: -2% 0 0 37%; 
-    position: absolute;
+    height: 21%;
+    width: 50%;
+    /* position: absolute; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 83px;
 }
 
 .btn-reset {
     width: 70%;
-    height: 40%;
+    height: 55%;
     background-color: antiquewhite;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
 /* backe */
 
 .manu-box {
-    width: 19%;
-    height: 60%;
-    margin: 8% 0 0 4%;
+    width: 75%;
+    height: 100%;
     position: absolute;
-    background-color: antiquewhite;
-    
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    padding-bottom: 80px;
+}
+
+.rcm {
+    font-size: 17px;
+    color: white;
+    padding: 0 10px 0 10px;
+    background-color: black;
+    margin: 0 10px 0 10px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    height: 35px;
 }
