--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -10,7 +10,7 @@
     <title>Hif_BMI</title>
 </head>
 
-    <!--  วิชัย คำมงคุณ 64070230(H) ผู้ช่วย  ปราโมทย์ จันทโสก 64070180-->
+    <!--  วิชัย คำมงคุณ 64070230(H) ผู้ช่วย  ปราโมทย์ จันทโสก 64070180/static/css/bmi_css.css-->
 
 <body>
     <div class="backgroud">
