--- a/static/css/home_css.css
+++ b/static/css/home_css.css
@@ -13,11 +13,8 @@
     list-style: none;
 }
 .backgroud{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url(bg02.jpeg);
-    background-size: cover;
-    background-position: center; 
+max-width: 100%;
+max-height: 100vh; 
 }
 
 .box {
