--- a/static/css/bmi_css.css
+++ b/static/css/bmi_css.css
@@ -159,17 +159,15 @@ input:checked ~ .menu-x {
 }
 
 .box-body {
-    width: 100%;
+    width: 95%;
     height: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    padding: 80px 0 0 300px;
-    max-width: 1366px;
-    min-width: 1366px;
-    max-height: 625px;
+    justify-content: center;
+    padding: 0 0 65px 350px;
+    min-width: 95%;
     min-height: 625px;
 }
 
@@ -190,17 +188,15 @@ input:checked ~ .menu-x {
 
 
 .input-form {
-    width: 100%;
+    width: 95%;
     height: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: end;
-    justify-content: flex-end;
-    padding: 0 150px 20px 0;
-    max-width: 1366px;
-    min-width: 1366px;
-    max-height: 625px;
+    align-items: center;
+    justify-content: center;
+    padding: 190px 0 0 700px;
+    min-width: 95%;
     min-height: 625px;
 }
 
@@ -238,9 +234,7 @@ input:checked ~ .menu-x {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 1100px;
-    min-width: 1100px;
-    max-height: 625px;
+    min-width: 75%;
     min-height: 625px;
     
 }
@@ -328,12 +322,10 @@ body{
     position: absolute;
     display: flex;
     justify-content: center;
-    align-items: end;
-    padding-bottom: 80px;
-    max-width: 1100px;
-    min-width: 1100px;
-    max-height: 625px;
+    align-items: center;
+    min-width: 75%;
     min-height: 625px;
+    padding-top: 450px;
 }
 
 .rcm {
@@ -346,4 +338,41 @@ body{
     text-align: center;
     align-items: center;
     height: 35px;
+}
+@media (max-width: 1046px) {
+    .input-form input {
+        width: 100%;
+        height: 60px;
+        font-size: 25px;
+        border-bottom: 3px solid black; 
+        border-top:  none;
+        border-left: none;
+        border-right: none;
+        background-color: rgb(214, 214, 214);
+        text-align: center;
+    }
+    .input-form{
+        padding: 190px 0 0 600px;
+    }
+    .btn-go {
+        width: 100%;
+        height: 60px;
+        font-size: 20px;
+        cursor: pointer;
+        margin-top: 60px;
+    }
+    .box-weigth{
+        width: 22%;
+    }
+    .p-box{
+        font-size: 25px;
+    }
+}
+@media (max-width: 846px) {
+    .input-form{
+        padding: 190px 0 0 520px;
+    }
+    .box-weigth{
+        height: 70px;
+    }
 }
