--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/login_css.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Outfit:wght@600&display=swap" rel="stylesheet">
     <title>Login</title>
 </head>
 
@@ -29,7 +32,7 @@
             {%endif%}
                 <form class="input-g" action="{{ url_for('login') }}" method="post" >
 
-                    <input type="text" class="input-field" placeholder="username" required
+                    <input type="text" class="input-field" placeholder="Username" required
                         maxlength="18" minlength="6" id="username" name="username">
 
 
