--- a/static/css/bmi_css.css
+++ b/static/css/bmi_css.css
@@ -153,137 +153,6 @@ input:checked ~ .menu-x {
 /* คนที่มาทำต่อเขียน class ข้างล่างนี้เลยนะ ข้างบนถ้าจะแก้อย่าลืมเก็บโค้ดเก่าไว้ก่อนนะ (ฺBIG FB : Wichai kommongkhun)*/
 
 
-.form-bg {
-    width: 100%;
-    height: 100%;
-}
-
-.box-body {
-    width: 95%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0 0 65px 350px;
-    min-width: 95%;
-    min-height: 625px;
-}
-
-.box-weigth {
-    width: 150px;
-    height: 100px;
-    border-right: 3px solid black;
-    border-left: 3px solid black;
-    margin: 60px 0 60px 0;
-    background-color: bisque;
-}
-
-.p-box {
-    font-size: 30px;
-    color: black;
-    text-align: center;
-}
-
-
-.input-form {
-    width: 95%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 190px 0 0 700px;
-    min-width: 95%;
-    min-height: 625px;
-}
-
-.input-form input {
-    width: 400px;
-    height: 60px;
-    font-size: 28px;
-    border-bottom: 3px solid black; 
-    border-top:  none;
-    border-left: none;
-    border-right: none;
-    background-color: rgb(214, 214, 214);
-    text-align: center;
-}
-.input1 {
-    margin: 10px 0 0 0;
-}
-
-.input2 {
-    margin: 160px 0 -35px 0;
-}
-.btn-go {
-    width: 400px;
-    height: 60px;
-    font-size: 30px;
-    cursor: pointer;
-    margin-top: 56px;
-}
-
-.mybmi {
-    width: 75%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: 75%;
-    min-height: 625px;
-    
-}
-
-.box-bmi {
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    background: rgb(255, 255, 255);
-    border: 5px solid black;
-    display: flex;
-    flex-direction: column;
-    width: 350px;
-    height: 350px;
-}
-
-.bmi-p1 {
-    font-size: 80px;
-    font-weight: 500;
-    color: black;
-    justify-items: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin-top: 85px;
-}
-
-.bmi-p2 {
-    font-size:90px;
-    font-weight: 500;
-    color: black;
-    margin: 3% 0 0 28.4%;
-}
-
-.inbox-bmi {
-    width: 100%;
-    height: 15%;
-    text-align: center;
-
-}
-
-.bmi-p3 {
-    font-size:20px;
-    font-weight: 400;
-    color: black;
-    margin: 1% 0 0 1%;
-
-}
-
 body{
     background-color: #666666;
     background-image: url('https://ae01.alicdn.com/kf/HTB1FoGFMgHqK1RjSZFEq6AGMXXaO/Backdrop-Baby-Hintergrund-Fantasy-Gray-Photoshoot-Background-T20190314.jpg');
@@ -292,87 +161,42 @@ body{
     background-repeat: no-repeat;
 }
 
-.reset-form {
-    height: 21%;
-    width: 50%;
-    /* position: absolute; */
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 83px;
-}
-
-.btn-reset {
-    width: 70%;
-    height: 55%;
-    background-color: antiquewhite;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-/* backe */
-
-.manu-box {
-    width: 75%;
-    height: 100%;
+/* กล่องข้อความ What is BMI?*/
+.box-1 {
+    width: 500px;
+    height: 250px;
+    color: aliceblue;
+    font-size: 22px;
+    margin: 10% 0 0 10%;
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 75%;
-    min-height: 625px;
-    padding-top: 450px;
+    background-color: bisque;
+
+}  
+
+/* กล่อง input */
+.box-2 {
+    width: 300px;
+    height: 400px;
+    margin: 10% 0 0 40%;
+    position: absolute;
+    background-color: antiquewhite;
 }
 
-.rcm {
-    font-size: 17px;
-    color: white;
-    padding: 0 10px 0 10px;
-    background-color: black;
-    margin: 0 10px 0 10px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    height: 35px;
+.input-1 {
+    width: 100%;
+    height: 10%;
+    position: absolute;
+
 }
-@media (max-width: 1046px) {
-    .input-form input {
-        width: 100%;
-        height: 60px;
-        font-size: 25px;
-        border-bottom: 3px solid black; 
-        border-top:  none;
-        border-left: none;
-        border-right: none;
-        background-color: rgb(214, 214, 214);
-        text-align: center;
-    }
-    .input-form{
-        padding: 190px 0 0 600px;
-    }
-    .btn-go {
-        width: 100%;
-        height: 60px;
-        font-size: 20px;
-        cursor: pointer;
-        margin-top: 60px;
-    }
-    .box-weigth{
-        width: 22%;
-    }
-    .p-box{
-        font-size: 25px;
-    }
+
+.input-2 {
+    width: 100%;
+    height: 10%;
+    position: absolute;
+    margin: 20% 0 0 0;
 }
-@media (max-width: 846px) {
-    .input-form{
-        padding: 190px 0 0 520px;
-    }
-    .box-weigth{
-        height: 70px;
-    }
+
+.submit {
+    margin: 50%;
+    position: absolute;
 }
